--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,9 +8,12 @@
   --text-white: #fff;
 
   --decor-gray: #f5f5f7;
+  --decor-blue-gray: #636b7f;
+  --decor-light-gray: #f5f5f7;
   --decor-red: #f23c30;
   --decor-green: #00B177;
   --decor-blue: #4056A1;
+  --decor-yellow: #ffdc38;
 }
 
 * {
@@ -29,9 +32,14 @@ body {
   font-family: 'Roboto', sans-serif;
   min-height: 280px;
   max-height: 1920px;
+  min-width: 350px;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+main {
+  padding: 25px 3.64%;
 }
